archive single home

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>home</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
@@ -32,13 +33,52 @@
             </div>
         </div>
     </div>
-
-
 </header>
 
+<div class="single-bg-overlay"></div>
+<section class="case-single-wrapper">
+    <div class="case-single-close">
+        &#8592;
+    </div>
+    <div class="case-single-title">
+        <h2>Locals Only!</h2>
+        <p>Locals Only! — ежегодный фестиваль актуальной музыки и спорта.
+            Мы его сами придумали, сами организовали и продолжаем развивать.
+            Миллениалы по всей стране приходят на Locals Only!, чтобы послушать
+            популярных артистов, попробовать себя в экстремальных видах спорта,
+            посетить лекции и перекусить у фудтрака.
+        </p>
+        <div class="city">
+            <span class="text-color-light">ГОРОД &#8594;</span><img src="" alt=""><span>Москва, Санкт-Петербург, Калининград, Сочи</span>
+        </div>
+    </div>
+    <div class="case-single-row">
+        <img src="img/case-page-img.jpg" alt="">
+        <p></p>
+    </div>
+
+    <div class="case-single-row">
+        <img src="img/case-page-img.jpg" alt="">
+        <p>На сцене выступали Anacondaz, Wildways, OBLADAET, BUMBLE BEEZY и диджеи Uppercuts</p>
+    </div>
+    <div class="case-single-row">
+        <img src="img/case-page-img.jpg" alt="">
+        <p>На сцене выступали Anacondaz, Wildways, OBLADAET, BUMBLE BEEZY и диджеи Uppercuts</p>
+    </div>
+    <div class="case-single-row">
+        <img src="img/case-page-img.jpg" alt="">
+        <p>На сцене выступали Anacondaz, Wildways, OBLADAET, BUMBLE BEEZY и диджеи Uppercuts</p>
+    </div>
+    <div class="case-single-row">
+        <img src="img/case-page-img.jpg" alt="">
+        <p>На сцене выступали Anacondaz, Wildways, OBLADAET, BUMBLE BEEZY и диджеи Uppercuts</p>
+    </div>
+</section>
 
 <main class="main-pages-wrapper">
-
+    <div class="home-video-banner">
+        <img src="img/video-banner-img.jpg" alt="">
+    </div>
     <section class="home-hello-block">
         <div class="internal-wrapper internal-wrapper-1000">
             <div class="hello-eyes">
@@ -63,18 +103,93 @@
     </section>
 
     <section class="home-cases-wrapper">
-        <div class="home-case-row flex-wrapper two-columns-left">
-            <div>
-                <a href="">
-                    <div class="case-hover">
-                        <h2></h2>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </a>
+
+        <div class="home-case-row flex-wrapper">
+            <div class="home-case-col width-33">
+                <div class="home-case-mask"></div>
+                <div class="home-case-hover">
+                    <h2>KARCHER НА МОСКОВСКОМ ВЕЛОПАРАДЕ</h2>
+                    <p>Концепция и проведение активации на велопараде и в соцсетях</p>
+                    <span>Активация</span>
+                </div>
+                <div class="home-case-col-img">
+                    <img src="img/case-thumb-1.jpg" alt="">
+                </div>
             </div>
-            <div></div>
+            <div class="home-case-col width-67">
+                <div class="home-case-mask"></div>
+                <div class="home-case-hover">
+                    <h2>KARCHER НА МОСКОВСКОМ ВЕЛОПАРАДЕ</h2>
+                    <p>Концепция и проведение активации на велопараде и в соцсетях</p>
+                    <span>Активация</span>
+                </div>
+                <div class="home-case-col-img">
+                    <img src="img/case-thumb-2.jpg" alt="">
+                </div>
+            </div>
         </div>
+
+
+        <div class="home-case-row flex-wrapper">
+            <div class="home-case-col width-33">
+                <div class="home-case-mask"></div>
+                <div class="home-case-hover">
+                    <h2>KARCHER НА МОСКОВСКОМ ВЕЛОПАРАДЕ</h2>
+                    <p>Концепция и проведение активации на велопараде и в соцсетях</p>
+                    <span>Активация</span>
+                </div>
+                <div class="home-case-col-img">
+                    <img src="img/case-thumb-1.jpg" alt="">
+                </div>
+            </div>
+            <div class="home-case-col width-33">
+                <div class="home-case-mask"></div>
+                <div class="home-case-hover">
+                    <h2>KARCHER НА МОСКОВСКОМ ВЕЛОПАРАДЕ</h2>
+                    <p>Концепция и проведение активации на велопараде и в соцсетях</p>
+                    <span>Активация</span>
+                </div>
+                <div class="home-case-col-img">
+                    <img src="img/case-thumb-2.jpg" alt="">
+                </div>
+            </div>
+            <div class="home-case-col width-33">
+                <div class="home-case-mask"></div>
+                <div class="home-case-hover">
+                    <h2>KARCHER НА МОСКОВСКОМ ВЕЛОПАРАДЕ</h2>
+                    <p>Концепция и проведение активации на велопараде и в соцсетях</p>
+                    <span>Активация</span>
+                </div>
+                <div class="home-case-col-img">
+                    <img src="img/case-thumb-2.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+
+        <div class="home-case-row flex-wrapper">
+            <div class="home-case-col width-67">
+                <div class="home-case-mask"></div>
+                <div class="home-case-hover">
+                    <h2>KARCHER НА МОСКОВСКОМ ВЕЛОПАРАДЕ</h2>
+                    <p>Концепция и проведение активации на велопараде и в соцсетях</p>
+                    <span>Активация</span>
+                </div>
+                <div class="home-case-col-img">
+                    <img src="img/case-thumb-1.jpg" alt="">
+                </div>
+            </div>
+            <div class="home-case-col more-cases-col width-33">
+                <img src="img/more-cases.png" alt="">
+                <p>больше кейсов</p>
+            </div>
+
+
+        </div>
+
+
+
+
 
     </section>
 
